--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,15 @@
 	<artifactId>QuestWorld</artifactId>
 	<version>2.5.3</version>
 	<build>
+		<directory>${project.basedir}/target</directory>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.5.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
