Updated vault repo Push some color code tweaks I forgot about

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		<!-- Vault repo -->
 		<repository>
 			<id>vault-repo</id>
-			<url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
+			<url>http://nexus.hc.to/content/repositories/pub_releases</url>
 		</repository>
 		<!-- Local file repo -->
 		<repository>
