Added /questeditor save Added autosave (options.autosave-interval, 0 disables) Added /qe alias for /questeditor Slight refactor on /questeditor, moved import/export code to main class Use POM to make plugin.yml have the right build number

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: QuestWorld
-version: 2.6.2
+version: ${pom.version}
 author: mrCookieSlime
 website: http://mrCookieSlime.github.io
 
@@ -13,7 +13,8 @@ commands:
   questeditor:
     description: Opens up the Quest Editor
     usage: /questeditor <gui/import/export>
-
+    aliases: [qe]
+    
 permissions:
   QuestWorld.editor:
     description: Allows you to use /questeditor
