--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>me.mrcookieslime</groupId>
 	<artifactId>QuestWorld</artifactId>
-	<version>2.6.2</version>
+	<version>2.6.3</version>
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<directory>${project.basedir}/target</directory>
 		<plugins>
 			<plugin>
