Another MASSIVE push, have got to stop doing this
Main feature: Hooks! (extensions, add-ons, whatever)
Make a class that extends QuestExtension, implement the required methods, and make an instance somewhere. Service provider magic takes care of the rest. Even the included hooks use this method, so take a look at them if you want an example.

Other stuff (plenty of that too)
- Changed all logging to built-in plugin logging
- Moved a bunch of files around, confusing the crap out of svn
- Added better translation support (Lang & Translation)
- Replaced all old translation, moving to translate everything
- Removed some unneeded tools
- Made interfaces for accessing QuestingObject (formerly QWObject) and Mission (formerly QuestMission) for use in extensions
- Deprecated NPC code outside of the Citizen hook/missions

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ author: mrCookieSlime
 website: http://mrCookieSlime.github.io
 
 main: me.mrCookieSlime.QuestWorld.QuestWorld
-softdepend: [CS-CoreLib, Vault, Citizens, Votifier, ChatReaction, ASkyBlock]
+softdepend: [CS-CoreLib, Vault]
 
 commands:
   quests:
