--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,7 @@ options:
   auto-update: true
   quest-check-delay: 60
   autosave-interval: 5
+  log-level: INFO
 party:
   max-members: 4
   enabled: true
