--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: QuestWorld
 version: ${pom.version}
 author: mrCookieSlime
+authors: [ezeiger92, erik1988]
 website: http://mrCookieSlime.github.io
 
 main: me.mrCookieSlime.QuestWorld.QuestWorld
