--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>me.mrcookieslime</groupId>
 	<artifactId>QuestWorld</artifactId>
-	<version>2.6.8-SNAPSHOT</version>
+	<version>2.6.8</version>
 	<build>
 		<resources>
 			<resource>
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.11.2-R0.1-SNAPSHOT</version>
+			<version>1.12.2-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- Vault dep -->
