--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>me.mrcookieslime</groupId>
 	<artifactId>QuestWorld</artifactId>
-	<version>2.6.8</version>
+	<version>2.6.9-SNAPSHOT</version>
 	<build>
 		<resources>
 			<resource>
@@ -63,6 +63,13 @@
 			<version>1.5.9</version>
 			<scope>provided</scope>
 			<optional>true</optional>
+		</dependency>
+		<!-- Gson dep -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<properties>
