I know I said it was broken last time... But, like, how did I forget I was going to do this. * Save paths for quest and user data now in config

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,3 +10,6 @@ book:
   on-first-join: true
 dialogue:
   prefix: '&f'
+save:
+  userdata: data-storage/Quest World/
+  questdata: plugins/QuestWorld/quests/
