Progress commit - plenty of cleanup I know there's still debug code in here, don't build from this commit. This is a just-in-case-my-computer-explodes code backup

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,6 +10,9 @@ book:
   on-first-join: true
 dialogue:
   prefix: '&f'
-save:
-  userdata: data-storage/Quest World/
-  questdata: plugins/QuestWorld/quests/
+data:
+  player:     ../../data-storage/Quest World/
+  questing:   quests/
+  dialogue:   dialogues/
+  presets:    presets/
+  extensions: extensions/
