--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ author: mrCookieSlime
 authors: [ezeiger92, erik1988]
 website: https://github.com/ezeiger92/QuestWorld2
 
-main: me.mrCookieSlime.QuestWorld.QuestWorld
+main: me.mrCookieSlime.QuestWorld.QuestWorldPlugin
 softdepend: [CS-CoreLib, Vault]
 
 commands:
