Lots of fixes, nearly stable! Sort of! * Added text wrapping to most elements (Fixes ezeiger92/QuestWorld2#58)   * There are still places this is not applied, but at least all areas where translations are used make use of this * Changed GuideBook to partially support changing lore (old books stop working after a restart) * Moved translations "book.display" and "book.lore" into "guide-book" * Moved translations "navigation.display" and "navigation.lore" into "navigation.item" * Fixed default death behavior not resetting progress * Fixed Mission.copy not clearing old lists before copying new data * Fixed quest editor gui not allowing for another page until 2 elements exist in that page

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,7 @@ options:
   auto-update: true
   quest-check-delay: 60
   autosave-interval: 5
+  text-wrap: 32
 party:
   max-members: 4
   enabled: true
