Change default playerdata location

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,7 +12,7 @@ book:
 dialogue:
   prefix: '&f'
 data:
-  player:     ../../data-storage/Quest World/
+  player:     playerdata/
   questing:   quests/
   dialogue:   dialogues/
   presets:    presets/
