Fixes Closes ezeiger92/QuestWorld2#102 Closes ezeiger92/QuestWorld2#100 Added "options.language" to main config to select language file Stub for /qe reset <player> [category_id [quest_id]] Dummy translation node and junk in the /quests command REMOVE BEFORE RELEASE PLS Stub for sending tellraw, title, subtitle, and actionbar messages via PlayerTools.sendTranslation

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,8 @@
 options:
   auto-update: true
-  quest-check-delay: 60
   autosave-interval: 5
+  quest-check-delay: 60
+  language: en_us
   text-wrap: 32
 party:
   max-members: 4
@@ -12,8 +13,8 @@ book:
 dialogue:
   prefix: '&f'
 data:
-  player:     playerdata/
-  questing:   quests/
   dialogue:   dialogues/
-  presets:    presets/
   extensions: extensions/
+  player:     playerdata/
+  presets:    presets/
+  questing:   quests/
