--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,15 @@
 	</repositories>
 	<dependencies>
 		<!-- Bukkit/Spigot dep -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
+			<version>1.12.2-R0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency> -->
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot-api</artifactId>
 			<version>1.12.2-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
