--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 			<id>vault-repo</id>
 			<url>http://nexus.hc.to/content/repositories/pub_releases</url>
 		</repository>
+		<!-- PlaceholderAPI repo -->
+		<repository>
+			<id>placeholderapi</id>
+			<url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+		</repository>
 	</repositories>
 	<dependencies>
 		<!-- Bukkit/Spigot dep -->
@@ -49,6 +54,14 @@
 			<groupId>net.milkbowl.vault</groupId>
 			<artifactId>VaultAPI</artifactId>
 			<version>1.6</version>
+			<scope>provided</scope>
+			<optional>true</optional>
+		</dependency>
+		<!-- PlaceholderAPI repo -->
+		<dependency>
+			<groupId>me.clip</groupId>
+			<artifactId>placeholderapi</artifactId>
+			<version>2.8.4</version>
 			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
