--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,7 @@
 options:
   autosave-interval: 5
   quest-check-delay: 60
+  quests-default-enabled: false
   language: en_us
   text-wrap: 32
 party:
