--- a/src/main/resources/sounds.yml
+++ b/src/main/resources/sounds.yml
@@ -8,7 +8,7 @@ sounds:
       pitch: 0.7
       volume: 0.3
     mission-reject:
-      sound: BLOCK_NOTE_SNARE
+      sound: BLOCK_NOTE_BLOCK_SNARE
     reward:
       sound: ENTITY_ITEM_PICKUP
   editor:
@@ -18,12 +18,12 @@ sounds:
     dialog-add:
       sound: ENTITY_PLAYER_LEVELUP
     destructive-action-warning:
-      sound: BLOCK_NOTE_PLING
+      sound: BLOCK_NOTE_BLOCK_PLING
     destructive-action-click:
       sound: ENTITY_BAT_DEATH
       pitch: 0.5
       volume: 0.5
   party:
     click:
-      sound: BLOCK_NOTE_PLING
+      sound: BLOCK_NOTE_BLOCK_PLING
       pitch: 0.2
