--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>me.mrcookieslime</groupId>
 	<artifactId>QuestWorld</artifactId>
-	<version>2.8.1-SNAPSHOT</version>
+	<version>2.9</version>
 	<build>
 		<resources>
 			<resource>
