--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>me.mrcookieslime</groupId>
 	<artifactId>QuestWorld</artifactId>
-	<version>2.8.0</version>
+	<version>2.8.1-SNAPSHOT</version>
 	<build>
 		<resources>
 			<resource>
@@ -31,8 +31,8 @@
 		</repository>
 		<!-- Vault repo -->
 		<repository>
-			<id>vault-repo</id>
-			<url>http://nexus.hc.to/content/repositories/pub_releases</url>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
 		</repository>
 		<!-- PlaceholderAPI repo -->
 		<repository>
@@ -51,7 +51,7 @@
 		</dependency>
 		<!-- Vault dep -->
 		<dependency>
-			<groupId>net.milkbowl.vault</groupId>
+			<groupId>com.github.MilkBowl</groupId>
 			<artifactId>VaultAPI</artifactId>
 			<version>1.7</version>
 			<scope>provided</scope>
